lang/examples/good/12-02-global-variable.wdr
var b: Int = 1;
var a: Int = b;

fun main(): Void {
  printInt(a);

  return;
}
