lang/examples/bad/03-02-assignment.wdr
fun main(): Void {
  var a: Int = 42;
  a = ;

  var b: Bool = True;
  b False;

  return;
}